opam-version: "2.0"
homepage: "https://softwarefoundations.cis.upenn.edu/"
doc: "https://softwarefoundations.cis.upenn.edu/"
authors: [
  "Benjamin C. Pierce"
  "Arthur Azevedo de Amorim"
  "Chris Casinghino"
  "Marco Gaboardi"
  "Michael Greenberg"
  "Cătălin Hriţcu"
  "Vilhelm Sjöberg"
  "Andrew Tolmach"
  "Brent Yorgey"
]
license: "like MIT"

build: [
  [make "-C" "plf-current" "-j%{jobs}%"]
]

install: [
  [make "-C" "plf-current" "install"]
]

bug-reports: "?"
depends: [
  "ocaml"
  "coq"
]
synopsis:
  "Programming Language Foundations (Volume 2 of Software Foundations)"
description:
  "Programming Language Foundations surveys the theory of programming languages, including operational semantics, Hoare logic, and static type systems."
url {
  src: "https://www.cis.upenn.edu/~bcpierce/sf/plf-current/plf.tgz"
}
