opam-version: "2.0"
homepage: "https://softwarefoundations.cis.upenn.edu/"
doc: "https://softwarefoundations.cis.upenn.edu/"
authors: [
  "Benjamin C. Pierce"
  "Arthur Azevedo de Amorim"
  "Chris Casinghino"
  "Marco Gaboardi"
  "Michael Greenberg"
  "Cătălin Hriţcu"
  "Vilhelm Sjöberg"
  "Andrew Tolmach"
  "Brent Yorgey"
]
license: "like MIT"

build: [
  [make "-C" "vfa-current" "-j%{jobs}%"]
]

install: [
  [make "-C" "vfa-current" "install"]
]

bug-reports: "?"
depends: [
  "ocaml"
  "coq"
]
synopsis:
  "Verified Functional Algorithms (Volume 3 of Software Foundations)"
description:
  "Verified Functional Algorithms demonstrates how fundamental data structures can be formally specified and mechanically verified."
url {
  src: "https://www.cis.upenn.edu/~bcpierce/sf/vfa-current/vfa.tgz"
}
